--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
                 <img src="assets/inspo.png" alt="Poster 4" class="gallery-image"/>
             </a>
         </div>
+        <div class="collage-item">
+            <a href="#">
+                <img src="assets/truman_steps.png" alt="Poster 5" class="gallery-image"/>
+            </a>
+        </div>
+        <div class="collage-item">
+            <a href="#">
+                <img src="assets/seedraze.png" alt="Poster 5" class="gallery-image"/>
+            </a>
+        </div>
         <!-- Add more collage items as needed -->
     </div>
 
