playing with new layouts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="collage-item">
             <a href="#">
-                <img src="assets/Candleraze.png" alt="Poster 2" class="gallery-image"/>
+                <img src="assets/Daydream.png" alt="Poster 2" class="gallery-image"/>
             </a>
         </div>
         <div class="collage-item">
@@ -56,12 +56,12 @@
         </div>
         <div class="collage-item">
             <a href="#">
-                <img src="assets/truman_steps.png" alt="Poster 5" class="gallery-image"/>
+                <img src="assets/Elated.jpg" alt="Poster 5" class="gallery-image"/>
             </a>
         </div>
         <div class="collage-item">
             <a href="#">
-                <img src="assets/seedraze.png" alt="Poster 5" class="gallery-image"/>
+                <img src="assets/seedraze.png" alt="Poster 6" class="gallery-image"/>
             </a>
         </div>
         <!-- Add more collage items as needed -->
